--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>un chronomètre en secondes avec setTimeout</title>
-    <script src="./JS/main.JS"></script>
+    <script src="/Chrono/JS/main.JS"></script>
 </head>
 <body>
     <h1>Un chronomètre en secondes</h1>
